# haskell-vanguard

./: .gitmodules  README.md  cabal.project  haskell-vanguard.cabal
pkgs/IfElse/: LICENSE
pkgs/IfElse/Control/Monad/: IfElse.hs
pkgs/byteorder/System/: ByteOrder.hs
pkgs/colour/: Tests.hs  colour.cabal
pkgs/colour/Data/: Colour.hs
pkgs/colour/Data/Colour/: CIE.hs  Internal.hs  Matrix.hs  Names.hs  RGB.hs  RGBSpace.hs  SRGB.hs
pkgs/colour/Data/Colour/CIE/: Illuminant.hs
pkgs/colour/Data/Colour/RGBSpace/: HSL.hs  HSV.hs
pkgs/colour/Data/Colour/SRGB/: Linear.hs
pkgs/elerea/: CHANGES  LICENSE  Setup.hs
pkgs/elerea/FRP/: Elerea.hs
pkgs/elerea/FRP/Elerea/: Param.hs  Simple.hs
pkgs/elerea/FRP/Elerea/Simple/: Pure.hs
pkgs/erf/src/Data/Number/: Erf.hs
pkgs/fingertree/: changelog
pkgs/fingertree/Data/: FingerTree.hs
pkgs/fingertree/Data/IntervalMap/: FingerTree.hs
pkgs/fingertree/Data/PriorityQueue/: FingerTree.hs
pkgs/fingertree/tests/: ft-properties.hs
pkgs/hostname/Network/: HostName.hs
pkgs/regex-base/Text/Regex/Base/: Context.hs  Impl.hs  RegexLike.hs
pkgs/regex-compat/Text/: Regex.hs
pkgs/regex-posix/Text/Regex/: Posix.hs
pkgs/regex-posix/Text/Regex/Posix/: ByteString.hs  Sequence.hs  String.hs  Wrap.hsc
pkgs/regex-posix/Text/Regex/Posix/ByteString/: Lazy.hs
pkgs/regex-posix/cbits/: regcomp.c
pkgs/sendfile/: sendfile.cabal
pkgs/sendfile/src/Network/Socket/SendFile/: Internal.hs  Portable.hs  Win32.hsc
pkgs/tf-random/: ChangeLog  LICENSE.brg  LICENSE.tf
pkgs/tf-random/cbits/: threefish.h  threefish_block.c  threefish_port.h
pkgs/tf-random/src/System/Random/: TF.hs
pkgs/tf-random/src/System/Random/TF/: Gen.hs  Init.hs  Instances.hs
pkgs/unix-bytestring/src/System/Posix/Types/: Iovec.hsc
