cabal-version: 1.12

name:           haskell-vanguard
version:        0
synopsis:       Build a certain set of packages
description:
category:       Development
homepage:       https://github.com/fumieval/haskell-vanguard#readme
bug-reports:    https://github.com/fumieval/haskell-vanguard/issues
author:         Fumiaki Kinoshita
maintainer:     fumiexcel@gmail.com
copyright:      Copyright (c) 2019 Fumiaki Kinoshita
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.8.1
build-type:     Simple
extra-source-files:

source-repository head
  type: git
  location: https://github.com/fumieval/haskell-vanguard

library
  exposed-modules:
  build-depends: abstract-deque
    , abstract-par
    , adjunctions
    , aeson
    , ansi-terminal
    , ansi-wl-pprint
    , appar
    , asn1-encoding
    , asn1-parse
    , asn1-types
    , assert
    , async
    , attoparsec
    , auto-update
    , base64-bytestring
    , base-compat
    , base-compat-batteries
    , basement
    , base-orphans
    , base-prelude
    , bifunctors
    , blaze-builder
    , blaze-html
    , blaze-markup
    , Boolean
    , BoundedChan
    , bsb-http-chunked
    , byteable
    , byteorder
    , bytes
    , Cabal == 2.5.0.0
    , cabal-doctest
    , cairo
    , call-stack
    , case-insensitive
    , cassava
    , cborg
    , cereal
    , Chart
    , Chart-cairo
    , clock
    , cmdargs
    , code-page
    , colour
    , comonad
    , compact
    , conduit
    , connection
    , constraints
    , contravariant
    , cookie
    , cpu
    , criterion
    , criterion-measurement
    , cryptonite
    , data-default
    , data-default-class
    , data-default-instances-containers
    , data-default-instances-dlist
    , data-default-instances-old-locale
    , distributive
    , dlist
    , doctest
    , double-conversion
    , either
    , elerea
    , entropy
    , enummapset-th
    , erf
    , exceptions
    , extra
    , fast-builder
    , filepattern
    , fixed
    , flock
    , fmlist
    , foldl
    , foreign-var
    , free
    , gauge
    , generic-deriving
    , ghc-paths
    , gio
    , glib
    , Glob
    , GLURaw
    , GLUtil
    , gtk
    , gtk2hs-buildtools
    , gtkglext
    , half
    , hashable
    , hashtables
    , haskell-lexer
    , hasktags
    , heaps
    , hinotify
    , hmatrix
    , hmatrix-gsl
    , hmatrix-quadprogpp
    , hostname
    , hourglass
    , hpath
    , hpp
    , hsyslog
    , HTTP
    , http2
    , http-client
    , http-client-tls
    , http-date
    , http-types
    , HUnit
    , IfElse
    , influxdb
    , integer-logarithms
    , intervals
    , invariant
    , iproute
    , iteratee
    , iteratee-compress
    , js-dgtable
    , js-flot
    , js-jquery
    , json
    , JuicyPixels
    , kan-extensions
    , kickchan
    , lens
    , lens-aeson
    , lifted-async
    , lifted-base
    , limp
    , limp-ortools
    , linear
    , ListLike
    , maplike
    , math-functions
    , megaparsec
    , memory
    , MemoTrie
    , microlens
    , microlens-ghc
    , microlens-mtl
    , microlens-platform
    , microlens-th
    , microstache
    , mime-types
    , mmorph
    , monad-control
    , monad-par
    , monad-par-extras
    , MonadRandom
    , monad-skeleton
    , mono-traversable
    , murmur-hash
    , mwc-random
    , network
    , network-bsd
    , network-byte-order
    , network-multicast
    , network-uri
    , newtype-generics
    , NumInstances
    , ObjectName
    , old-locale
    , Only
    , OpenGL
    , OpenGLRaw
    , operational
    , optional-args
    , optparse-applicative
    , pango
    , parallel
    , parser-combinators
    , parsergen
    , path
    , pem
    , piecewise-polynomial
    , pipes
    , pipes-safe
    , pointed
    , prettyprinter
    , prettyprinter-ansi-terminal
    , pretty-show
    , primitive
    , process-extras
    , profunctors
    , psqueues
    , QuickCheck
    , quickcheck-io
    , random
    , reflection
    , regex-base
    , regex-compat
    , regex-posix
    , resourcet
    , retry
    , SafeSemaphore
    , scientific
    , semigroupoids
    , semigroups
    , sendfile
    , serialise
    , setenv
    , SHA
    , shake
    , shared-buffer
    , simple-sendfile
    , snappy
    , socks
    , split
    , splitmix
    , StateVar
    , statistics
    , stm-delay
    , storable-complex
    , streaming-commons
    , streams
    , syb
    , tagged
    , tagsoup
    , temporary
    , text-short
    , tf-random
    , th-abstraction
    , th-lift
    , time-locale-compat
    , tls
    , tls-session-manager
    , total-array
    , transformers-base
    , transformers-compat
    , unix-bytestring
    , unix-compat
    , unliftio
    , unliftio-core
    , unordered-containers
    , utf8-string
    , uuid-types
    , vault
    , vector
    , vector-algorithms
    , vector-binary-instances
    , vector-builder
    , vector-space
    , void
    , wai
    , warp
    , warp-tls
    , websockets
    , word8
    , x509
    , x509-store
    , x509-system
    , x509-validation
    , xml
    , yaml
    , zlib
  default-language: Haskell2010
